More Prusa Link support and API homepage

--- a/DockerFile
+++ b/DockerFile
@@ -9,6 +9,7 @@ ADD api.py /
 ADD wrapper.sh /
 ADD templates/index.html /templates/
 ADD templates/delete.html /templates/
+ADD templates/homepage.html /templates/
 
 RUN pip install -r requirements.txt
 
